--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 add_library(${PROJECT_NAME} SHARED 
 	${PROJECT_SOURCE_DIR}/src/image.c
 	${PROJECT_SOURCE_DIR}/src/center.c
+	${PROJECT_SOURCE_DIR}/src/kmeans.c
 )
 
 target_link_libraries(${PROJECT_NAME} PNG::PNG)
